--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,12 @@ Version: 0.8
 Authors@R: c(
     person("Richard", "Groenewald", role = "ctb"),
     person("Barinder", "Thind", , "barinder.thi@gmail.com", role = c("aut", "cre", "cph")),
-    person("Jiguo Cao - aut", "Last", role = "aut"),
-    person("Sidi Wu - ctb", role = "ctb")
+    person("Jiguo", "Cao", role = "aut"),
+    person("Sidi Wu", role = "ctb")
     )
 Description: This package fits models of the form y(z, f(x) | theta) = z + f(x) + epsilon. In other words, this package will allow users to build
              models that have either functional or scalar responses paired with functional and scalar covariates. The main backbone of these models is
-             neural networks. There are also a number of helper functions that make workflow easier for the user. 
-Details: To be updated.
+             neural networks. There are also a number of helper functions that make workflow easier for the user.
 Imports: keras,
          tensorflow,
          fda.usc,
