--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(fnn.plot)
 export(fnn.predict)
 export(fnn.tune)
 import(Matrix)
-import(caret)
 import(doParallel)
 import(fda)
 import(fda.usc)
@@ -18,3 +17,5 @@ import(keras)
 import(pbapply)
 import(reshape2)
 import(tensorflow)
+importFrom(caret,confusionMatrix)
+importFrom(caret,createFolds)
