--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports: keras,
          foreach,
          Matrix
 URL: https://arxiv.org/abs/2006.09590, https://github.com/b-thi/FNN 
-License: `use_mit_license()`
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
